--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Tombs of Amascut
+author=LlemonDuck
+support=https://github.com/LlemonDuck/tombs-of-amascut.git
+description=Utilities and information for raiding the Tombs of Amascut.
+tags=toa,raid,3
+plugins=com.duckblade.osrs.toa.TombsOfAmascutPlugin
