--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 plugins {
-	id 'java'
+    id 'java'
+    id 'idea'
+    id 'checkstyle'
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
 
 repositories {
@@ -14,6 +23,9 @@ def runeLiteVersion = 'latest.release'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
+    implementation group: 'com.google.inject.extensions', name: 'guice-multibindings', version: '4.1.0', {
+        exclude group: 'com.google.inject'
+    }
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
@@ -23,8 +35,8 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'com.example'
-version = '1.0-SNAPSHOT'
+group = 'com.duckblade.osrs'
+version = '1.0.0'
 sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
