--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Tombs of Amascut
 author=LlemonDuck
 support=https://github.com/LlemonDuck/tombs-of-amascut.git
 description=Utilities and information for raiding the Tombs of Amascut.
-tags=toa,raid,3
+tags=toa,raid,3,invocation,preset
 plugins=com.duckblade.osrs.toa.TombsOfAmascutPlugin
