project: set release version 11

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.release.set(11)
 }
 
 test {
